# auth_auth

./: .gitignore  requirements.txt
backend/: .env.example  README.md  app.py  config.py  config.yaml  main.py  pyproject.toml  runtime.py
backend/api/: routes.py
backend/app/: __init__.py  config.py  container.py  db.py  dependencies.py  models.py  rbac.py  security.py
backend/app/core/: __init__.py  crypto.py  security.py
backend/app/db/: __init__.py  base.py  models.py  session.py
backend/app/middleware/: __init__.py
backend/app/routers/: __init__.py  auth.py  graph.py  secured.py
backend/app/routes/: auth.py  internal.py
backend/app/schemas/: __init__.py  session.py
backend/app/services/: __init__.py  auth_service.py  oidc.py  rbac.py  session.py  token_cache.py  user.py
backend/auth/: claims.py  ms_client.py  routes.py  sessions.py
backend/bff/: graph.py
frontend/: README.md  config.yaml  package-lock.json  package.json
frontend/src/: App.css  App.js  App.test.js  Header.js  LoggedOut.js  Login.js  ProtectedRoute.js  index.css  index.js  routes.js
frontend/src/components/: Header.js
frontend/src/components/auth/: ProtectedRoute.js  api_auth.js  auth.js
frontend/src/components/common/: AccessDenied.js  Loading.js
frontend/src/components/layout/: Header.css  Header.js
frontend/src/pages/: AccessDenied.js  Admin.js  Chat.js  Dashboard.js  Docs.js  Editor.js  Home.js  Landing.js  LoggedOut.js  Login.js  NotFound.js  Scenario.js  Task.js
