[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.2.1",
    "apsw>=3.46.0.0",
    "msal>=1.26.0",
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1.0",
    "python-dateutil>=2.9.0.post0",
    "cachetools>=5.3.3",
    "PyYAML>=6.0.0"
]
